--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Circle-pixel-bucket.png" />
+    <link rel="icon" type="image/png" href="/circle-pixel-bucket.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>carrykit-blog</title>
   </head>
